@@ -461,6 +461,7 @@ libao2/ao_alsa5.c svn_keywords=Author+Date+Id+Revision
 libao2/ao_alsa9.c svn_keywords=Author+Date+Id+Revision
 libao2/ao_arts.c svn_keywords=Author+Date+Id+Revision
 libao2/ao_dxr2.c svn_keywords=Author+Date+Id+Revision
+libao2/ao_esd.c svn_keywords=Author+Date+Id+Revision
 libao2/ao_mpegpes.c svn_keywords=Author+Date+Id+Revision
 libao2/ao_nas.c svn_keywords=Author+Date+Id+Revision
 libao2/ao_null.c svn_keywords=Author+Date+Id+Revision
